--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="spacing">16dp</dimen>
     <dimen name="status_indicator_radius">12dp</dimen>
     <dimen name="avatar_size">40dp</dimen>
+    <dimen name="avatar_corner_radius">2dp</dimen>
     <dimen name="row_height_min">72dp</dimen>
 
 </resources>
