--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
 
-    <color name="gray">#a5585858</color>
-    <color name="green">#38978D</color>
+    <color name="gray">#cccccc</color>
+    <color name="green">#47c724</color>
 
 </resources>
