--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/details_header_heigh"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -47,11 +47,10 @@
 
                     <TextView
                         android:id="@+id/name"
-                        fontPath="@string/lato_bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="8dp"
-                        android:textSize="25sp"
+                        android:textAppearance="@style/ProfileText.Name"
                         tools:ignore="MissingPrefix"
                         tools:text="Phil Oliver"/>
 
@@ -67,7 +66,7 @@
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textAppearance="@style/ProfileText.Username"
                     tools:text="\@phil"/>
 
             </LinearLayout>
