--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
 
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="gray">#cccccc</color>
     <color name="green">#47c724</color>
 
