--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-    <dimen name="row_primary_text">16sp</dimen>
 
     <dimen name="spacing">16dp</dimen>
     <dimen name="status_indicator_radius">12dp</dimen>
@@ -9,5 +7,6 @@
     <dimen name="avatar_corner_radius">2dp</dimen>
     <dimen name="row_height_min">72dp</dimen>
     <dimen name="divider_thickness">1dp</dimen>
+    <dimen name="details_header_heigh">300dp</dimen>
 
 </resources>
