--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,39 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="CrewView" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="CrewView" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CrewView.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar"/>
+    <style name="CrewView.NoActionBar"/>
 
-    <style name="Divider">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/divider_thickness</item>
-        <item name="android:background">@color/gray</item>
+    <style name="ProfileText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ProfileText.Name">
+        <item name="android:textSize">25sp</item>
+        <item name="fontPath">@string/lato_bold</item>
+    </style>
+
+    <style name="ProfileText.Username">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Detail">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="DetailLabel">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="UserListName">
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
