Add shared element transition for user image

--- a/app/src/main/res/layout/item_user_row.xml
+++ b/app/src/main/res/layout/item_user_row.xml
@@ -12,6 +12,7 @@
 
     <ImageView
         android:id="@+id/avatar"
+        android:scaleType="centerCrop"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
         android:layout_marginEnd="@dimen/spacing"
