--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#443642</color>
+    <color name="colorPrimaryDark">#312730</color>
+    <color name="colorAccent">#E01765</color>
 
 
+    <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="gray">#cccccc</color>
-    <color name="green">#47c724</color>
+    <color name="green">#3EB890</color>
 
 </resources>
