--- a/app/src/main/res/drawable/circle_status_away.xml
+++ b/app/src/main/res/drawable/circle_status_away.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
+    <solid
+        android:color="@color/transparent"/>
+
     <stroke
         android:width="2dp"
         android:color="@color/gray"/>
